--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "docusaurus build --out-dir docs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve"
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-alpha.51",
-    "@tsconfig/docusaurus": "^1.0.2",
+    "@tsconfig/docusaurus": "1.0.2",
     "@types/react": "^16.9.56",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
